--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "@azure/core-auth": "latest",
     "@azure/core-sse": "latest",
     "axios": "^1.7.7",
+    "backend": "file:",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
