--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
-    "react": "^18.3.1",
+    "react": "file:",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2"
