--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,16 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure-rest/ai-inference": "latest",
-    "@azure/core-auth": "latest",
-    "@azure/core-sse": "latest",
+    "@azure-rest/ai-inference": "^1.0.0-beta.5",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-sse": "^2.1.3",
+    "@google/generative-ai": "^0.21.0",
+    "@huggingface/inference": "^3.1.1",
     "axios": "^1.7.7",
     "backend": "file:",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "useragent": "^2.3.0",
+    "youtube-music-api": "^1.0.6"
   }
 }
