--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -3,7 +3,11 @@
     "builds": [
       {
         "src": "index.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+          "memory": 1024,
+          "maxDuration": 10
+        }
       }
     ],
     "routes": [
